@@ -371,6 +371,7 @@
     * 3769 FIX: cisco_temperature: Fixed exception in case of empty SNMP data received from device
     * 3770 FIX: win_dhcp_pools: Fixed crash in case of empty DHCP pools
     * 3781 FIX: ipmi: made check more robust against incomplete datasets
+    * 3700 FIX: FIX lparstat_aix.cpu_util usage of checkgroup parameters...
 
     Multisite:
     * 3187 notification view: new filter for log command via regex
